# image2live2d

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
service/seethrough/: Dockerfile  README.md  app.py  pipeline.py  requirements-service.txt  run_on_vm.sh  startup.sh
src/image2live2d/: __init__.py  __main__.py  api.py  batch.py  gpu.py  pipeline.py  preview.py  samples.py
templates/: README.md
tests/: test_align_pro_model.py  test_api_batch.py  test_appendages.py  test_calibrate_dynamics.py  test_calibrate_moc3.py  test_capability.py  test_cc_split.py  test_character_corpus.py  test_cli_samples.py  test_cmo3_caff.py  test_cmo3_model_xml.py  test_combined_eyes.py  test_crossbackend.py  test_decompose_service.py  test_density_aware.py  test_expressions.py  test_eye_closed.py  test_face_zorder.py  test_garment_appendages.py  test_gpu_lifecycle.py  test_hair_bounce.py  test_head_rigidity.py  test_head_turn.py  test_ingest_preprocess.py  test_inp_container.py  test_irr.py  test_landmark.py  test_layer_denoise.py  test_limb_parenting.py  test_limb_split.py  test_limbs.py  test_live2d_emitter.py  test_mesh.py  test_moc3_binary.py  test_moc3_emit.py  test_moc3_roundtrip.py  test_motion_drive.py  test_mouth_cavity.py  test_nijilive_emitter.py  test_phase2.py  (+16 more)
tests/data/: character_corpus.json
tools/: align_pro_model.py  calibrate_corpus.py  calibrate_dynamics.py  calibrate_moc3.py  cubism_core.py  emit_cubism_bundle.py  feel_parity.py  make_sample_corpus.py  moc3_render.py  physics_excite.py  preview_deform.py  render_motions.py  sweep_character.py
(+68 files in other folders)
